--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,25 @@ body {
   padding: 0;
   box-sizing: border-box;
 }
+
+.spinner {
+  animation: spinning 1s linear infinite;
+}
+.full_page_spinner {
+  font-size: 5rem;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+@keyframes spinning {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
