--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
 .spinner {
   animation: spinning 1s linear infinite;
 }
+
 .full_page_spinner {
   font-size: 5rem;
   height: 100vh;
@@ -46,9 +47,7 @@ body {
   height:30px
 }
 
-
-
-  .popup .block:hover{
+.popup:hover{
     z-index: 10;
     position: absolute;
     height: 600px; 
@@ -56,8 +55,4 @@ body {
     top:auto;
     left: auto;
     transform: ease-out translate(20%), scale(1.1); 
-  }
-
-.popup{
-  display:none
 }
