--- a/src/index.css
+++ b/src/index.css
@@ -60,3 +60,20 @@ body {
   filter: blur(5px);
   -webkit-filter: blur(5px);
 }
+
+.repoCard:hover{
+  box-shadow: 0px 0px 4px 0px #0a9aec;
+}
+
+.searchme {
+  background-color: aqua;
+}
+
+#input {
+  padding: 10px;
+}
+
+#buttons {
+  padding: 5px;
+  height: 41px;
+}
