--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
-body {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+/* body {
+  width: 100%;
+} */
 
 .spinner {
   animation: spinning 1s linear infinite;
@@ -61,3 +59,19 @@ body {
   -webkit-filter: blur(5px);
 }
 
+.repoCard:hover{
+  box-shadow: 0px 0px 4px 0px #0a9aec;
+}
+
+.searchme {
+  background-color: aqua;
+}
+
+#input {
+  padding: 10px;
+}
+
+#buttons {
+  padding: 5px;
+  height: 41px;
+}
