--- a/src/index.css
+++ b/src/index.css
@@ -61,8 +61,16 @@ body {
   -webkit-filter: blur(5px);
 }
 
+.repoCard{
+  transition: width 2s, height 2s, transform .2s;
+  width: 250px;
+}
+
 .repoCard:hover{
-  box-shadow: 0px 0px 4px 0px #0a9aec;
+  box-shadow: 2px 0px 2px 0px #0a9aec;
+  width: 253px;
+  height: 79px;
+  margin-top: -9px;
 }
 
 .searchme {
