--- a/src/index.css
+++ b/src/index.css
@@ -64,11 +64,12 @@
   width: 250px;
 }
 
-.repoCard:hover{
+.repocard:hover{
   box-shadow: 2px 0px 2px 0px #0a9aec;
   width: 253px;
   height: 79px;
   margin-top: -9px;
+  padding: 2%;
 }
 
 .searchme {
@@ -82,4 +83,23 @@
 #buttons {
   padding: 5px;
   height: 41px;
+}
+
+.searchRepos {
+  margin-top: 50px;
+  margin-bottom: 30px;
+}
+
+.repocard {
+  border-bottom: 2px solid #DCDCDC;
+  margin: 10px 0px 10px 0px;
+  padding: 2%;
+  height: auto;
+  background: white;
+}
+
+.searchRepo {
+  display: flex;
+  flex-direction: row;
+  margin: 20px 1px 10px 0px;
 }
