star color change on click

--- a/src/index.css
+++ b/src/index.css
@@ -107,3 +107,15 @@ body {
 #repo-name {
   width: 90%;
 }
+
+.notStarred {
+  padding: 5px;
+  background-color: black;
+  color: white;
+}
+
+.star {
+  padding: 5px;
+  background-color: black;
+  color: yellow;
+}
