--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,12 @@ body {
   animation: spinning 1s linear infinite;
 }
 
+.spinnerPlot {
+  animation: spinning 1s linear infinite;
+  width: 75px;
+  height: 75px;
+}
+
 .full_page_spinner {
   font-size: 5rem;
   height: 100vh;
