--- a/src/index.css
+++ b/src/index.css
@@ -93,7 +93,6 @@ body {
 
 .searchRepos {
   margin-top: 50px;
-  margin-bottom: 30px;
 }
 
 .repocard {
@@ -108,10 +107,6 @@ body {
   display: flex;
   flex-direction: row;
   margin: 20px 1px 10px 0px;
-}
-
-#repo-name {
-  width: 90%;
 }
 
 .notStarred {
@@ -189,4 +184,49 @@ body {
 
 .issue-activity-container {
   height: 50vh;
+}
+
+.search-form {
+  margin: 0 0 10px;
+}
+
+.sort-dropdown {
+  width: 50%;
+  font-size: 14px;
+  color: #0366d6;
+  border: 1px solid #e1e4e8;
+  background-color: #fafbfc;
+  box-shadow: 0px 1px 0px rgba(149,157,165,0.1), inset 0px 2px 0px rgba(255,255,255,0.25);
+  font-weight: 600;
+  line-height: 20px;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+#search-button {
+  display: block;
+  padding: 4px 8px;
+}
+
+.horizontal-line {
+  margin-right: 2rem;
+}
+
+@media only screen and (max-width: 1375px) {
+  .horizontal-line {
+    margin: 15px 0px;
+  }
+}
+
+#repo-name {
+  width: 75%;
+  font-size: 14px;
+  color: #0366d6;
+  border: 1px solid #e1e4e8;
+  box-shadow: 0px 1px 0px rgba(149,157,165,0.1), inset 0px 2px 0px rgba(255,255,255,0.25);
+  line-height: 20px;
+}
+
+.main-text-color {
+  color: #0366d6;
 }
